@@ -2,19 +2,8 @@
 fixtures:
   repositories:
     auditd: https://github.com/simp/pupmod-simp-auditd
-    augeasproviders:
-      repo: https://github.com/simp/augeasproviders
-      branch: simp-master
-    augeasproviders_core:
-      repo: https://github.com/simp/augeasproviders_core
-      branch: simp-master
-    augeasproviders_grub:
-      repo: https://github.com/simp/augeasproviders_grub
-      branch: simp-master
-    logrotate: https://github.com/simp/pupmod-simp-logrotate
-    rsyslog: https://github.com/simp/pupmod-simp-rsyslog
-    simp_options: https://github.com/simp/pupmod-simp-simp_options
-    simpcat: https://github.com/simp/pupmod-simp-simpcat
+    augeasproviders_core: https://github.com/simp/augeasproviders_core
+    augeasproviders_grub: https://github.com/simp/augeasproviders_grub
     simplib: https://github.com/simp/pupmod-simp-simplib
     stdlib: https://github.com/simp/puppetlabs-stdlib
   symlinks:
